--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,32 @@
     />
   </head>
   <body>
-    {% block content %}{% endblock %}
+      
+       <nav class="navbar navbar-dark bg-dark justify-content-between">
+      <a class="navbar-brand" href="/">User</a>
+       <ul class="nav justify-content-end">
+        
+        {% if session['username']%}
+        <li class='nav-item'>
+          <a class="nav-link" href="/logout">Logout</span></a>
+        </li>
+        {% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="/login">Login</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/register">Sign Up</span></a>
+        </li>
+        {% endif %}
+      </ul>
+     
+     
+    </nav>
+    <div class="container" style="margin-top: 2em">
+      {% for category, msg in get_flashed_messages(with_categories=True) %}
+      <div class="alert alert-{{category}}">{{ msg }}</div>
+      {% endfor %} {% block content %}{% endblock %}
+    </div>
+     
   </body>
 </html>
