--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block content %}
 <div class="container justify-content-center">
-  <h1 class="text-center">Register Here</h1>
+  <h1 class="text-center">Login</h1>
   <form method="POST">
     {{ form.hidden_tag() }} {% for field in form if field.widget.input_type !=
     'hidden'%}
